# sss_cffi

./: .gitignore  .gitmodules  README.rst  pyproject.toml
src/sss/: __init__.py  _ffi_build.py  bindings.py  exceptions.py
